# Vst3HostingTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gradle/: build.gradle  settings.gradle
src/: Buffer.hpp  Flag.hpp  Module.hpp  PeakMeter.hpp  ScopeExit.hpp  StrCnv.cpp  StrCnv.hpp  Vst3HostCallback.cpp  Vst3HostCallback.hpp  Vst3Plugin.cpp  Vst3Plugin.hpp  Vst3PluginFactory.cpp  Vst3PluginFactory.hpp  Vst3Utils.hpp  debugger_output.hpp  main.cpp  prefix.hpp
src/Vst3Plugin/: Vst3PluginImpl.cpp  Vst3PluginImpl.hpp
